@@ -37,7 +37,7 @@ a {
         self.assertEqual(None, irs)
 
         href = os.path.join(os.path.dirname(__file__), 
-                            '..', '..', '..', 'sheets', 'import.css')
+                            '..', '..', 'sheets', 'import.css')
         href = 'file:' + urllib.pathname2url(href)
         s = cssutils.parseString(self.exp, 
                                  href=href)
@@ -54,7 +54,7 @@ a {
         "cssutils.parseFile()"
         # name if used with open, href used for @import resolving
         name = os.path.join(os.path.dirname(__file__), 
-                            '..', '..', '..', 'sheets', 'import.css')
+                            '..', '..', 'sheets', 'import.css')
         href = 'file:' + urllib.pathname2url(name)
         
         s = cssutils.parseFile(name, href=href, media='screen', title='from file')
@@ -76,7 +76,7 @@ a {
         # name is used for open and setting of href automatically
         # test needs to be relative to this test file!
         os.chdir(os.path.dirname(__file__))
-        name = os.path.join('..', '..', '..', 'sheets', 'import.css')
+        name = os.path.join('..', '..', 'sheets', 'import.css')
         
         s = cssutils.parseFile(name, media='screen', title='from file')
         self.assert_(isinstance(s, cssutils.css.CSSStyleSheet))
@@ -135,7 +135,7 @@ a {
     def test_parseUrl(self):
         "cssutils.parseUrl()"
         href = os.path.join(os.path.dirname(__file__), 
-                            '..', '..', '..', 'sheets', 'import.css')
+                            '..', '..', 'sheets', 'import.css')
         href = u'file:' + urllib.pathname2url(href)
         #href = 'http://seewhatever.de/sheets/import.css'
         s = cssutils.parseUrl(href, 
